--- a/IaC/xpipe-cloud/xpipe-v1-web-portal/idx.yaml
+++ b/IaC/xpipe-cloud/xpipe-v1-web-portal/idx.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-ecommerce-idx-config
+  name: xpipe-v1-web-portal-idx-config
   namespace: xpipe-cloud
 data:
   ES_JAVA_OPTS: "-Xmx1024m -Xms1024m"
-  cluster.name: "xpipe-ecommerce"
+  cluster.name: "xpipe-v1-web-portal"
   #xpack.security.enabled: true
   # Use single node discovery in order to disable production mode and avoid bootstrap checks.
   # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: xpipe-ecommerce-idx-secret
+  name: xpipe-v1-web-portal-idx-secret
   namespace: xpipe-cloud
 stringData:
   ELASTIC_PASSWORD: "secret"
@@ -24,8 +24,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: xpipe-ecommerce-idx
-  name: xpipe-ecommerce-idx-pvc
+    app: xpipe-v1-web-portal-idx
+  name: xpipe-v1-web-portal-idx-pvc
   namespace: xpipe-cloud
 #provisioner: kubernetes.io/aws-ebs
 spec:
@@ -40,15 +40,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: xpipe-ecommerce-idx
-  name: xpipe-ecommerce-idx
+    app: xpipe-v1-web-portal-idx
+  name: xpipe-v1-web-portal-idx
   namespace: xpipe-cloud
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: xpipe-ecommerce-idx
+      app: xpipe-v1-web-portal-idx
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -57,7 +57,7 @@ spec:
   template:
     metadata:
       labels:
-        app: xpipe-ecommerce-idx
+        app: xpipe-v1-web-portal-idx
     spec:
       initContainers:
         - name: init-lostfound
@@ -65,7 +65,7 @@ spec:
           command: [ "sh", "-c", "rm -Rf /usr/share/elasticsearch/data/lost+found" ]
           volumeMounts:
             - mountPath: /usr/share/elasticsearch/data
-              name: xpipe-ecommerce-idx-volume
+              name: xpipe-v1-web-portal-idx-volume
           resources:
             requests:
               cpu: 10m
@@ -75,7 +75,7 @@ spec:
         #  command: [ "bash", "-c", "yum install -y rsync && rsync -ravP /usr/share/elasticsearch/data/ /data/" ]
         #  volumeMounts:
         #    - mountPath: /data
-        #      name: xpipe-ecommerce-idx-volume
+        #      name: xpipe-v1-web-portal-idx-volume
         #  resources:
         #    requests:
         #      cpu: 10m
@@ -85,7 +85,7 @@ spec:
           command: [ "sh", "-c", "chown -R 1000:0 /usr/share/elasticsearch/data" ]
           volumeMounts:
             - mountPath: /usr/share/elasticsearch/data
-              name: xpipe-ecommerce-idx-volume
+              name: xpipe-v1-web-portal-idx-volume
           resources:
             requests:
               cpu: 10m
@@ -96,22 +96,22 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: ES_JAVA_OPTS
-              name: xpipe-ecommerce-idx-config
+              name: xpipe-v1-web-portal-idx-config
         - name: cluster.name
           valueFrom:
             configMapKeyRef:
               key: cluster.name
-              name: xpipe-ecommerce-idx-config
+              name: xpipe-v1-web-portal-idx-config
         - name: discovery.type
           valueFrom:
             configMapKeyRef:
               key: discovery.type
-              name: xpipe-ecommerce-idx-config
+              name: xpipe-v1-web-portal-idx-config
         - name: ELASTIC_PASSWORD
           valueFrom:
             secretKeyRef:
               key: ELASTIC_PASSWORD
-              name: xpipe-ecommerce-idx-secret
+              name: xpipe-v1-web-portal-idx-secret
         image: elasticsearch:7.13.3
         imagePullPolicy: IfNotPresent
         #command: [ "tail" ]
@@ -128,7 +128,7 @@ spec:
 #          periodSeconds: 10
 #          successThreshold: 1
 #          timeoutSeconds: 1
-        name: xpipe-ecommerce-idx
+        name: xpipe-v1-web-portal-idx
         ports:
         - containerPort: 9200
           protocol: TCP
@@ -155,22 +155,22 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /usr/share/elasticsearch/data
-          name: xpipe-ecommerce-idx-volume
+          name: xpipe-v1-web-portal-idx-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: xpipe-ecommerce-idx-volume
+      - name: xpipe-v1-web-portal-idx-volume
         persistentVolumeClaim:
-          claimName: xpipe-ecommerce-idx-pvc
+          claimName: xpipe-v1-web-portal-idx-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-ecommerce-idx
-  name: xpipe-ecommerce-idx
+    app: xpipe-v1-web-portal-idx
+  name: xpipe-v1-web-portal-idx
   namespace: xpipe-cloud
 spec:
   ports:
@@ -183,6 +183,6 @@ spec:
     protocol: TCP
     targetPort: 9300
   selector:
-    app: xpipe-ecommerce-idx
+    app: xpipe-v1-web-portal-idx
   sessionAffinity: None
   type: ClusterIP
