--- a/IaC/xpipe-cloud/xpipe-v1-web-portal/ingress.yaml
+++ b/IaC/xpipe-cloud/xpipe-v1-web-portal/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: xpipe-ecommerce
+  name: xpipe-v1-web-portal
   namespace: xpipe-cloud
   labels:
-    app: xpipe-ecommerce
+    app: xpipe-v1-web-portal
   #annotations:
   #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
@@ -17,7 +17,7 @@ spec:
            pathType: Prefix
            backend:
             service:
-              name: xpipe-ecommerce
+              name: xpipe-v1-web-portal
               port:
                 number: 80
   tls:
