--- a/IaC/xpipe-cloud/xpipe-v1-web-portal/service.yaml
+++ b/IaC/xpipe-cloud/xpipe-v1-web-portal/service.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-ecommerce
-  name: xpipe-ecommerce
+    app: xpipe-v1-web-portal
+  name: xpipe-v1-web-portal
   namespace: xpipe-cloud
 spec:
   ports:
@@ -13,6 +13,6 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: xpipe-ecommerce
+    app: xpipe-v1-web-portal
   sessionAffinity: None
   type: ClusterIP
