Added Iam domain as module and api role

--- a/Products/XPipe/V1/xpipe-v1-api-collector/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-api-collector/.env.local
@@ -71,6 +71,10 @@ CRM_VENDOR_PATH=app/code/Crm
 DOCS_MODULE_PATH=Docs/V1/Api
 DOCS_VENDOR_PATH=app/code/Docs
 
+# Iam
+IAM_MODULE_PATH=Iam/V1/Api
+IAM_VENDOR_PATH=app/code/Iam
+
 # Lab
 LAB_MODULE_PATH=Lab/V1/Api
 LAB_VENDOR_PATH=app/code/Lab
