--- a/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
@@ -71,6 +71,10 @@ CRM_VENDOR_PATH=app/code/Crm
 DOCS_MODULE_PATH=Docs/V1/Module
 DOCS_VENDOR_PATH=app/code/Docs
 
+# Iam
+IAM_MODULE_PATH=Iam/V1/Module
+IAM_VENDOR_PATH=app/code/Iam
+
 # Lab
 LAB_MODULE_PATH=Lab/V1/Module
 LAB_VENDOR_PATH=app/code/Lab
