--- a/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
@@ -16,6 +16,7 @@ services:
       #- "${BASE_PATH}/${CMS_MODULE_PATH}/:${APP_CODE_PATH}/${CMS_VENDOR_PATH}"
       - "${BASE_PATH}/${CRM_MODULE_PATH}/:${APP_CODE_PATH}/${CRM_VENDOR_PATH}"
       - "${BASE_PATH}/${DOCS_MODULE_PATH}/:${APP_CODE_PATH}/${DOCS_VENDOR_PATH}"
+      - "${BASE_PATH}/${IAM_MODULE_PATH}/:${APP_CODE_PATH}/${IAM_VENDOR_PATH}"
       - "${BASE_PATH}/${LAB_MODULE_PATH}/:${APP_CODE_PATH}/${LAB_VENDOR_PATH}"
       - "${BASE_PATH}/${LOGGING_MODULE_PATH}/:${APP_CODE_PATH}/${LOGGING_VENDOR_PATH}"
       - "${BASE_PATH}/${MONITORING_MODULE_PATH}/:${APP_CODE_PATH}/${MONITORING_VENDOR_PATH}"
