task-84: init demo role module

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -226,6 +226,9 @@ atlassian*
 !/app/code/Pipe/LanguageSelector
 !/app/code/Pipe/ThemeSetup
 !/app/code/Pipe/Notifications
+!/app/code/Pipe/DemoRole
+!/app/code/Pipe/BetaRole
+!/app/code/Pipe/PipeRole
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
