--- a/Products/XPipe/V1/xpipe-v1-api-collector/src/composer.json
+++ b/Products/XPipe/V1/xpipe-v1-api-collector/src/composer.json
@@ -32,7 +32,7 @@
         "core/module-newsletter": "1.0.0",
         "core/module-notifications": "1.0.0",
         "core/module-notifications-poller": "1.0.0",
-        "core/module-profile": "1.0.0",
+        "core/module-profile-role": "1.0.0",
         "core/module-sales": "1.0.0",
         "core/module-search": "1.0.0",
         "core/module-store-view-default": "1.0.0",
