--- a/Core/V1/Module/Marketplace/composer.json
+++ b/Core/V1/Module/Marketplace/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
-        "magento/module-store": "101.1.*"
+        "magento/module-backend": "102.0.*"
     },
     "suggest": {
         "magento/module-theme": "101.1.*"
