init template catalog module

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -230,6 +230,7 @@ atlassian*
 !/app/code/Pipe/BetaRole
 !/app/code/Pipe/DeveloperRole
 !/app/code/Pipe/DebugSession
+!/app/code/Pipe/TemplateCatalog
 
 /app/design/adminhtml/*
 !/app/design/adminhtml/.gitkeep
