Added Lazy Mode

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/DefaultUsers/composer.json
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/DefaultUsers/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pipe/module-default-users",
-    "description": "Custom magento 2 module default users",
+    "description": "Magento 2 default admin users provisioning",
     "config": {
         "sort-packages": true
     },
