--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/composer.json
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
-        "magento/product-community-edition": "2.4.3-p3"
+        "magento/product-community-edition": "2.4.3-p3",
+        "pipe/module-default-users": "1.0.0"
     },
     "autoload": {
         "exclude-from-classmap": [
