--- a/Products/XPipe/V1/xpipe-v1-api-collector/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-api-collector/.env.local
@@ -103,3 +103,6 @@ XPIPE_CORE_PRODUCT_VERSION=1.0.0
 PIPELINES_GITHUB_ACCESS_TOKEN=
 PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=
 PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
+
+# Iam envs
+IAM_GROUPS_ACCESS_TOKEN=
