--- a/Products/XPipe/V1/xpipe-v1-api-collector/docker-compose.local.yml
+++ b/Products/XPipe/V1/xpipe-v1-api-collector/docker-compose.local.yml
@@ -31,6 +31,8 @@ services:
       - PIPELINES_GITHUB_ACCESS_TOKEN=${PIPELINES_GITHUB_ACCESS_TOKEN}
       - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
       - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
+      # Iam envs
+      - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
     ports:
       - "8090:80"
     networks:
