--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/composer.json
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/composer.json
@@ -112,6 +112,10 @@
         },
         {
             "type": "path",
+            "url": "app/code/Iam/*"
+        },
+        {
+            "type": "path",
             "url": "app/code/Lab/*"
         },
         {
