--- a/Products/XPipe/V1/xpipe-v1-api-collector/src/composer.json
+++ b/Products/XPipe/V1/xpipe-v1-api-collector/src/composer.json
@@ -18,37 +18,11 @@
             "magento/magento-composer-installer": true
         }
     },
-    "version": "2.4.3-p1",
+    "version": "2.4.3-p3",
     "require": {
-        "core/module-base-logger": "1.0.0",
-        "core/module-catalog-search": "1.0.0",
-        "core/module-contact": "1.0.0",
-        "core/module-copyright": "1.0.0",
-        "core/module-fontawesome": "1.0.0",
-        "core/module-form-submit-guard": "1.0.0",
-        "core/module-gdpr-cookie": "1.0.0",
-        "core/module-logger": "1.0.0",
-        "core/module-marketplace": "1.0.0",
-        "core/module-newsletter": "1.0.0",
-        "core/module-notifications": "1.0.0",
-        "core/module-notifications-poller": "1.0.0",
-        "core/module-profile-role": "1.0.0",
-        "core/module-sales": "1.0.0",
-        "core/module-search": "1.0.0",
-        "core/module-store-view-default": "1.0.0",
-        "core/module-store-view-italian": "1.0.0",
-        "core/module-welcome-message": "1.0.0",
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
-        "magento/product-community-edition": "2.4.3-p1",
-        "pipe/module-logo": "1.0.0",
-        "pipe/module-cart": "1.0.0",
-        "pipe/module-cms": "1.0.0",
-        "pipe/module-default-pages": "1.0.0",
-        "pipe/module-default-users": "1.0.0",
-        "pipe/module-landing-page": "1.0.0",
-        "pipe/module-language-selector": "1.0.0",
-        "pipe/module-theme-setup": "1.0.0"
+        "magento/product-community-edition": "2.4.3-p3"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -134,6 +108,10 @@
         {
             "type": "path",
             "url": "app/code/Docs/*"
+        },
+        {
+            "type": "path",
+            "url": "app/code/Iam/*"
         },
         {
             "type": "path",
